--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Open+Sans&family=Playfair+Display&family=Raleway&display=swap"
+          rel="stylesheet">
     %svelte.head%
 </head>
 <body>
