Updates and fixes
Signed-off-by: Gnanakeethan <gnanakeethan@users.noreply.github.com>

--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -8,9 +8,9 @@
 	<link
 		href='https://fonts.googleapis.com/css2?family=Nunito&family=Open+Sans&family=Playfair+Display&family=Raleway&display=swap'
 		rel='stylesheet'>
-	%svelte.head%
+	%sveltekit.head%
 </head>
 <body>
-<div class='subpixel-antialiased scrollbar-hide' id='svelte'>%svelte.body%</div>
+<div class='subpixel-antialiased scrollbar-hide' id='svelte'>%sveltekit.body%</div>
 </body>
 </html>
